--- a/src/css/modal-style.css
+++ b/src/css/modal-style.css
@@ -86,6 +86,23 @@
     justify-content: space-around;
 }
 
+#subSection{
+    height: 300px;
+}
+
+#submitContents{
+    height: 170px;
+    justify-content: center;
+    align-items: center
+}
+
+#submitButton{
+    background-color: rgb(56 189 248);
+    height: 48px;
+    padding: 8px 16px;
+    font-size: 20px;
+}
+
 @keyframes modal-show {
     from {
         opacity: 0;
